kubernetes/applications/media/books/calibre-web-automated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web-automated
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web-automated
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: calibre-web-automated
        image: crocodilestick/calibre-web-automated:3.0.1 # renovate: docker=crocodilestick/calibre-web-automated
        ports:
          - name: http
            containerPort: 8083
        volumeMounts:
          - name: config
            mountPath: /config
          - name: ingest
            mountPath: /cwa-book-ingest
          - name: library
            mountPath: /calibre-library
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-web-automated-config
      - name: ingest
        emptyDir: {}
      - name: library
        persistentVolumeClaim:
          claimName: books-media-nfs
