kubernetes/applications/media/books/calibre-web-automated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: calibre-web-automated
  ports:
    - name: web
      port: 80
      targetPort: http
