kubernetes/applications/media/books/calibre-web-automated/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-automated
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ebooks Management
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Books
    gethomepage.dev/icon: calibre.png
    gethomepage.dev/name: Calibre-Web
spec:
  ingressClassName: cilium
  rules:
    - host: calibre.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: calibre-web-automated
                port:
                  name: web
  tls:
    - hosts:
        - calibre.costanza.cloud
      secretName: calibre-web-automated-tls
